--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,3 +15,19 @@ html.light {
   background-color: white;
   color: black;
 }
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.3;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.blink-effect {
+  animation: blink 1s linear infinite;
+}
